<resources>
    <string name="app_name">Rawg Submission</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cannot_load_the_data">Cannot load the data!</string>
    <string name="result_from">Result From :</string>
    <string name="game_image">Game Image</string>
    <string name="game_name">Game Name</string>
    <string name="release">Release:</string>
    <string name="example_date">12–12–2012</string>
    <string name="metacritic">Metacritic:</string>
    <string name="example_metacritic">84</string>
    <string name="rating">Rating:</string>
    <string name="example_rating">4.4/5</string>
    <string name="platform">Platform: </string>
    <string name="example_platform">Example Platform</string>
    <string name="genre">Genre: </string>
    <string name="example_genre">Example Genre</string>
    <string name="available_on">Available on: </string>
    <string name="example_store">Example Store</string>
    <string name="minimum_specs">Minimum Specs</string>
    <string name="example_spec">Example Spec</string>
    <string name="recommendation_specs">Recommendation Specs</string>
    <string name="screenshot_game">Screenshot Game</string>
    <string name="androrawg_store">AndroRawg Store</string>
    <string name="find_your_best_game_here">Find your best game here</string>
    <string name="user_logo">User Logo</string>
    <string name="find_favorite_game">Find Favorite Game</string>
    <string name="best_game_of_the_year">Best Game of The Year</string>
    <string name="latest_game_release">Latest Game Release</string>
    <string name="games_image">Games Image</string>
    <string name="games_name">Games Name</string>
    <string name="img_goty_game">Img Goty Game</string>
    <string name="rate">Rate</string>
    <string name="example_rate">5.6</string>
    <string name="image">Image</string>
    <string name="screenshoot_game">Screenshoot Game</string>
    <string name="find_your_game">Find your game</string>
    <string name="find">Find</string>
    <string name="genres">Genres</string>
    <string name="developer">Developer</string>
    <string name="publisher">Publisher</string>
    <string name="about_game">About Game</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="shooter">Shooter</string>
    <string name="developers">Developers</string>
    <string name="bruh_software">Bruh Software</string>
    <string name="imastudio">imastudio</string>
    <string name="image_platform">image platform</string>
    <string name="error">Error</string>
    <string name="genres_count">Adventure\n300 games</string>
</resources>